resources/glooctl gateway/guests-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: guests-vs
  namespace: gloo-system
spec:
  displayName: guests-vs
  virtualHost:
    domains:
      - 'local.trent.org'
    routes:
      - matchers:
          - prefix: /guests
        delegateAction:
          name: guests-prt
          namespace: gloo-system
      - matchers:
          - prefix: /admin
        delegateAction:
          name: admin-prt
          namespace: gloo-system
